--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -12,4 +12,4 @@ lfx_crowdfunding: eliasempresas # Replace with a single LFX Crowdfunding project
 polar: eliasempresas # Replace with a single Polar username
 buy_me_a_coffee: eliasempresas # Replace with a single Buy Me a Coffee username
 thanks_dev: eliasempresas # Replace with a single thanks.dev username
-custom: https://www.eliasempresas.com/doar # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: "https://www.eliasempresas.com/doar" # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
